style: fix preloader pokeball on mobile version app

--- a/src/components/PokeHomeItem/PokeHomeItem.module.scss
+++ b/src/components/PokeHomeItem/PokeHomeItem.module.scss
@@ -65,3 +65,10 @@
     }
   }
 }
+@media (max-width: 425px) {
+  .loader{
+    img{
+      object-fit: contain;
+    }
+  }
+}
